First structure sketch
reordered code, added new folders, etc...
added ModelBase class
added string resource file
renamed some existing classes
still la lot of documentation lacks

--- a/ForzaFramework/ForzaFramework/View/MainWindow.xaml
+++ b/ForzaFramework/ForzaFramework/View/MainWindow.xaml
@@ -5,15 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ignore="http://www.ignore.com"
         mc:Ignorable="d ignore"
-        Height="300"
-        Width="300"
+        Height="272.26"
+        Width="307.192"
         Title="MVVM Light Application"
         DataContext="{Binding Main, Source={StaticResource Locator}}">
-    
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Skins/MainSkin.xaml" />
+                <ResourceDictionary Source="Styles/MainStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
